overlapping fixed

--- a/src/app/customer/cusnav/cusnav.component.css
+++ b/src/app/customer/cusnav/cusnav.component.css
@@ -9,6 +9,7 @@
     top: 0;
     width: 100%;
     position: fixed;
+    z-index: 1000;
    
 }
 
