--- a/src/app/customer/customer-prodlist/customer-prodlist.component.css
+++ b/src/app/customer/customer-prodlist/customer-prodlist.component.css
@@ -135,3 +135,6 @@ mat-card:hover{
   cursor: pointer;
 }
 
+.mainn{
+  z-index: 1;
+}
